Hopefully this will fix the toolbar bug and show off @ptcommits

--- a/gui/html/wavelist.html
+++ b/gui/html/wavelist.html
@@ -300,7 +300,7 @@
 				digest = digests[i];
 				$(renderDigest(digest)).appendTo('#mainlist');
 				}
-			$('<li class="longend"></li>').appendTo('#mainlist');
+			//$('<li class="longend"></li>').appendTo('#mainlist');
 			reset_scroll($('#mainlist'));
 		}
 
