--- a/gui/html/wavelist.html
+++ b/gui/html/wavelist.html
@@ -300,12 +300,23 @@
 				digest = digests[i];
 				$(renderDigest(digest)).appendTo('#mainlist');
 				}
-			tail = $('<li class="longend"></li>').appendTo('#mainlist');
-			tail.append($('<div class="page_prev">'));
-			tail.append($('<div class="page_new">'));
-			tail.append($('<div class="page_next">'));
+			tail = $('<li class="longend"></li>').append($('<table><tr></tr></table>')).appendTo('#mainlist');
+			tail= tail.find('tr')
+			tail.append($('<td class="page_prev">'));
+			tail.append($('<td class="page_new">'));
+			tail.append($('<td class="page_next">'));
 			reset_scroll($('#mainlist'));
 		}
+
+		$('.page_prev, .page_next, .page_new').live('mouseover', 
+			function() {$(this).addClass('over')}
+		).live('mouseout', function () {
+			$(this).removeClass('over')
+		}).live('mousedown', function () {
+			$(this).addClass('down')
+		}).live('mouseup', function () {
+			$(this).removeClass('down')
+		});
 
 		shortmonths = ['Jan','Feb','Mar','Apr','May','Jun','Jul','Aug','Sep','Oct','Nov','Dec'];
 		function renderTime(ms) {
