--- a/gui/html/waveviewer.html
+++ b/gui/html/waveviewer.html
@@ -10,6 +10,32 @@
 		<link rel="stylesheet" type="text/css" href="css/tooltip.css">
 
 		<style type="text/css">
+			body {
+				background-color: #F6FFF6;
+			}
+
+			#mainlist {padding-left:5px;}
+
+			#mainlist li {
+				list-style-type:none;
+				border: 3px solid #AAA;
+				margin: 5px 23px 5px 50px;
+				padding: 5px 5px 8px 5px;
+				border-radius:10px;
+				background-color: #FFF;
+			}
+
+			#mainlist .creator_name {
+				display:inline;
+				font-weight:bold;
+				padding-right:10px;
+				background:url('../html/img/dots_small.png') no-repeat;
+				background-position:right 5px;
+			}
+
+			#mainlist li.over {
+			}
+
 			#footer .find  {
 				float:left;
 				position:relative;
@@ -41,9 +67,8 @@
 				<table class="textbutton noselect"><tr>
 					<td class="left"></td>
 					<td class="center">+</td>
-					<td class="right"/>
+					<td class="right"></td>
 				</tr></table>
-				</div>
 			</div>
 			<div class="toolbar noselect">
 				<ul class="invisible select">
@@ -77,6 +102,10 @@
 				</ul>
 			</div>
 		</div>
+		<ul id="mainlist">
+			<li><div class="creator_name">Philip Horger</div>This is a blip</li>
+			<li>This is another</li>
+		</ul>
 		<div id="footer">
 		<div class="footerinner">
 			<div class="tags">
@@ -115,22 +144,27 @@
 	<script type="text/javascript" src="jslib/jquery.mousewheel.js"></script>
 	<script type="text/javascript" src="jslib/scroll.js"></script>
 	<script type="text/javascript">
+		// bindScrollbar($('.scrollbar'),objecttobindto)
+
 		function checkSelect() {
-			if ($('#mainlist li.selected .contact').length >0){
-				$("#nav .toolbar .contactselect").removeClass("invisible")
-				$("#nav .toolbar .select").addClass("invisible")				
-				$("#nav .toolbar .nonselect").addClass("invisible")				
+			if ($('#mainlist li.editing').length >0){
+				$("#nav .toolbar .edit").removeClass("invisible")
+				$("#nav .toolbar .select").addClass("invisible")
+				$("#nav .toolbar .nonselect").addClass("invisible")
 			} else if ($('#mainlist li.selected').length >0){
-				$("#nav .toolbar .contactselect").addClass("invisible")				
+				$("#nav .toolbar .edit").addClass("invisible")
 				$("#nav .toolbar .select").removeClass("invisible")
 				$("#nav .toolbar .nonselect").addClass("invisible")
 			} else {
-				$("#nav .toolbar .contactselect").addClass("invisible")				
+				$("#nav .toolbar .edit").addClass("invisible")
 				$("#nav .toolbar .select").addClass("invisible")
 				$("#nav .toolbar .nonselect").removeClass("invisible")
 			}
 			adj_toolbar();
 		}
+
+		livehover('#mainlist li');
+		$('#mainlist li').live('click', function () {$(this).toggleClass('selected'); checkSelect()});
 
 		function openOptions() {
 			if ($('.toolbar .gotoOptions').hasClass('active')) {
@@ -146,6 +180,7 @@
 			}
 		}
 
+		// Switch between tags and jumps when the label is clicked
 		$('#footer .label').click(function () {
 			if ($('#footer .tags').hasClass('invisible')) {
 				$('#footer .tags').removeClass('invisible');
@@ -155,43 +190,6 @@
 				$('#footer .jumps').removeClass('invisible');
 			}
 		});
-
-		// switch toolbar depending on selection state
-		function initListSelectability() {
-			$('#mainlist li').mousedown(function(){
-				$(this).toggleClass('selected');
-				sendObject({"type":"waveSelected",
-					"value":$(this).hasClass('selected')});
-				checkSelect();
-			});
-		}
-
-		initListSelectability()
-
-		function reloadList(newlist) {
-			results = newlist;
-			querytext = results['query'];
-			searchbox.val(querytext);
-			$('.toolbar .active').removeClass('active');
-			switch(querytext) {
-				case "in:inbox":
-					$('.toolbar .gotoInbox').addClass('active');
-					break;
-				case "in:all":
-					$('.toolbar .gotoArchive').addClass('active');
-					break;
-				case "::contacts":
-					$('.toolbar .gotoContacts').addClass('active');
-					break;
-			}
-			digests = results['digests'];
-			$('#mainlist li').remove();
-			for (i in digests) {
-				digest = digests[i];
-				$(renderDigest(digest)).appendTo('#mainlist');
-				}
-			initListSelectability()
-		}
 
 		shortmonths = ['Jan','Feb','Mar','Apr','May','Jun','Jul','Aug','Sep','Oct','Nov','Dec'];
 		function renderTime(ms) {
@@ -204,60 +202,6 @@
 				// less than a day, show time
 				return ""+d.getHours()+":"+d.getMinutes();
 			}
-		}
-
-		function renderDigest(digest) {
-			item = "<li><div class='name'>"+digest['title']+"</div>";
-			participantlist = digest['participants']
-			item+= "<table class='details'><tr><td><table><tr><td class='participants'><div>"
-			for (i in participantlist) {
-				part = participantlist[i];
-				item += "<img class='online' alt='"+part['nick']+"' src='"+part['avatar']+"'/>"
-			}
-			item+="</div></td>";
-			// don't include a TD for tags at this point
-			item+="</tr></table></td>";
-			item+="<td class='date'>"+renderTime(digest['date']);
-			if (digest['unread'] == 0) {
-				item+='<div class="msgs">'+digest['total']+" msgs</div></td></tr></table></li>";
-			} else {
-				item+='<div class="msgs"><div class="unread">'+digest['unread']+"</div> of "+digest['total']+"</div></td></tr></table></li>";
-			}
-			// alert(item)
-			return item;
-		}
-
-		function contactsList(contacts) {
-			//alert(JSON.stringify(contacts));
-			$('.toolbar li').removeClass('active');
-			$('.toolbar .gotoContacts').addClass('active');
-			$('#mainlist li').remove();
-			for (i in contacts) {				
-				$('<li></li>').append(renderContact(contacts[i])).appendTo('#mainlist');
-			}
-			initListSelectability()
-		}
-
-		function query() {
-			sendObject({
-				'type':'query',
-				'value':searchbox.val()
-			});
-		}
-
-		$('#nav .search .right').click(function () {
-			query();
-		});
-
-		searchbox.keypress(function(event) {
-			if (event.keyCode=='13') query();
-		});
-
-		query();
-
-		function query_nav(str) {
-			searchbox.val(str);
-			query();
 		}
 
 		function activateToolbars(menuonly){
