--- a/gui/html/wavelist.html
+++ b/gui/html/wavelist.html
@@ -147,9 +147,8 @@
 			<div class="toolbar noselect">
 				<ul class="invisible select">
 					<li class="eye-open"><div>Read</div></li>
-					<li class="eye-open"><div>Mark as Read</div></li>
-					<li class="eye-open"><div>Unfollow</div></li>
-					<li class="storage"><div>Shove</div></li>
+					<li class="pencil"><div>Mark Read</div></li>
+					<li class="trash"><div>Shove</div></li>
 					<li class="folder"><div>Folderize</div></li>
 					<li class="more">...</li>
 				</ul>
@@ -162,7 +161,7 @@
 					<li class="more">...</li>
 				</ul>
 				<ul class="contactselect invisible">
-					<li class="inbox"><div>New Wave</div></li>
+					<li class="arrow"><div>New Wave</div></li>
 					<li class="inbox"><div>Shared Waves</div></li>
 					<li class="inbox"><div>Search</div></li>
 					<li class="more">...</li>
