Magnifying glass icon

--- a/gui/html/wavelist.html
+++ b/gui/html/wavelist.html
@@ -163,7 +163,7 @@
 				<ul class="contactselect invisible">
 					<li class="arrow"><div>New Wave</div></li>
 					<li class="inbox"><div>Shared Waves</div></li>
-					<li class="inbox"><div>Search</div></li>
+					<li class="search"><div>Search</div></li>
 					<li class="more">...</li>
 				</ul>
 			</div>
