--- a/gui/html/waveviewer.html
+++ b/gui/html/waveviewer.html
@@ -133,7 +133,7 @@
 					<li class="arrow"><div>Next</div></li>
 					<li class="inbox gotoInbox"><div>Inbox</div></li>
 					<li class="storage gotoArchive"><div>Archive</div></li>
-					<li class="trash"><div>Trash</div></li>
+					<li class="trash"><div>Leave</div></li>
 					<li class="arrow"><div>Jump</div></li>
 					<li class="eye-open"><div>Document Mode</div></li>
 					<li class="more">...</li>
