Added Reply button to WaveViewer

--- a/gui/html/waveviewer.html
+++ b/gui/html/waveviewer.html
@@ -155,6 +155,7 @@
 				<ul class="invisible select">
 					<li class="arrow"><div>Next</div></li>
 					<li class="pencil"><div>Edit</div></li>
+					<li class="reply"><div>Reply</div></li>
 					<li class="eye-open"><div>Mark as Unread</div></li>
 					<li class="trash"><div>Delete</div></li>
 					<li class="arrow"><div>Export to New Wave</div></li>
